--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Kotivadelma : Simple, portable and easily customizable lobby information display system" />
+    <meta name="description" content="Kotivadelma : Simple, portable and easily customizable lobby information screen system" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/SipuliSopuli/kotivadelma">View on GitHub</a>
 
           <h1 id="project_title">Kotivadelma</h1>
-          <h2 id="project_tagline">Simple, portable and easily customizable lobby information display system</h2>
+          <h2 id="project_tagline">Simple, portable and easily customizable lobby information screen system</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/SipuliSopuli/kotivadelma/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,7 @@
         <h1>
 <a name="kotivadelma" class="anchor" href="#kotivadelma"><span class="octicon octicon-link"></span></a>Kotivadelma</h1>
 
-<p>Kotivadelma is simple, lightweight, portable and easily customizable lobby information display system build with jQuery. It can be used example at home, schools, in the workplace and public places. Kotivadelma is designed to run in browser, so no package installations needed.</p>
+<p>Kotivadelma is simple, lightweight, portable and easily customizable lobby information screen system build with jQuery. It can be used example at home, schools, in the workplace and public places. Kotivadelma is designed to run in browser, so no package installations needed.</p>
 
 <h4>
 <a name="kotivadelma-shows" class="anchor" href="#kotivadelma-shows"><span class="octicon octicon-link"></span></a>Kotivadelma shows</h4>
