Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li>sunrise and sunset</li>
 <li>current weather</li>
 <li>weather forecast</li>
-</ul><p><a href="http://i.imgur.com/Pcdj1B5.jpg">Picture of Kotivadelma in use at my vestibule</a>, running in Raspberry Pi. Check <a href="#make-raspberry-pi-run-kotivadelma">instructions</a> howto make Raspberry Pi run lobby information system.</p>
+</ul><p><a href="http://i.imgur.com/Pcdj1B5.jpg">Picture of Kotivadelma in use at my vestibule</a>, running on Raspberry Pi.</p>
 
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
@@ -72,11 +72,6 @@
 <p>You need stop code(s) to display next public transport depatures from desired stop(s). It is very easy and simple to get these codes.</p>
 
 <p>First go to hsl <a href="http://aikataulut.reittiopas.fi/pysakit/en/">journey planner</a> and search stops or select stop list by locality. On the page that opens next, search desired stop from list and open the timetable for it by clicking stop name. Now you see timetable to desired stop. At the end of this site url, there is string like <em>1173101.html</em>. Those numbers are stop code that you want, so in this example stop code is <em>1173101</em>.</p>
-
-<h2>
-<a name="make-raspberry-pi-run-kotivadelma" class="anchor" href="#make-raspberry-pi-run-kotivadelma"><span class="octicon octicon-link"></span></a>Make Raspberry Pi run Kotivadelma</h2>
-
-<p>Coming soon!</p>
 
 <h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
